app/src/main/java/com/example/darkfox/trainingnotes/dto/errors/FirebaseLoginException.kt
package com.example.darkfox.trainingnotes.dto.errors

class FirebaseLoginException(val failCause:String = "") : Exception(failCause)